Completeness correction for move assignment

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -29,7 +29,7 @@ One option for value semantics is the use of <code>std::experimental::polymophic
 In this case, what is needed is value semantics for an indirectly owned value.  This paper proposes the <code>indirect_value</code> template for future standardisation. The issues to be addressed will be examined in further detail, prior art on the subject will be discussed and finally, open questions posed.
 
 ## Perfect-Pimpl
-In C++, when anything in a class definition changes dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern the Pimpl idiom was specialised [H.Sutter 98].  Almost three decades on since these ideas started circulating implementation of the Pimpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
+In C++, when anything in a class definition changes dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the Pimpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the Pimpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
 
 ```
 // Header file
@@ -39,7 +39,7 @@ public:
     ~widget();
 private:
     class impl;
-    unique_ptr<impl> pimpl;
+    std::experimental::propagate_const<std::unique_ptr<impl>> pimpl;
 };
  
 // Implementation file
@@ -51,7 +51,7 @@ widget::widget() : pimpl{ std::make_unique<impl>( /*...*/  } { }
 widget::~widget() = default;
 ```
 
-Using std::unique_ptr the exposed class gets compiler generated move semantics, but not copy semantic.  If these are required the user must now manually define a copy-constructor and assignment operator.
+For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>Pimpl</code> class”. Note, semantically the <code>Pimpl</code> class is the implementation details of the visible class.  As such it is important that constness propagates from the visible to the <code>Pimpl</code> class, this is achieved by the implementation here making use of <code>propagate_const</code>. Using <code>std::unique_ptr</code> the exposed class gets compiler-generated move semantics, but not copy semantic.  If these are required the user must now manually define a copy-constructor and assignment operator.
 
 ```
 // Header file
@@ -61,39 +61,36 @@ public:
     ~widget();
 
     widget(const widget&);
-    widget& operator(const widget&);
+    widget& operator=(const widget&);
 private:
     class impl;
-    unique_ptr<impl> pimpl;
+    std::experimental::propagate_const<std::unique_ptr<impl>> pimpl;
 };
  
 // Implementation file
 class widget::impl {
     // :::
 };
- 
-widget::widget() : pimpl{ std::make_unique<impl>( /*...*/  } { }
+
+widget::widget() : pimpl{ std::make_unique<impl>() } {}
 widget::~widget() = default;
 
-widget(const widget& rhs)
+widget::widget(const widget& rhs)
+{ if (rhs.pimpl) { pimpl = std::make_unique<impl>(*pimpl); }   }
+
+widget& widget::operator=(const widget& rhs)
 {
-    if (rhs.pimpl) { 
-      pimpl = std::unique_ptr<impl>(*pimpl);
-    }
-}
+    if (!rhs.pimpl ) { get_underlying(pimpl).reset(); }
+    else if (!pimpl ) { std::make_unique<impl>(*rhs.pimpl); }
+    else { *pimpl = *rhs.pimpl; }
 
-widget& operator=(const widget& rhs) {
-
-    if (this != &rhs ) { 
-        pimpl = std::unique_ptr<impl>(*pimpl);
-    }
     return *this;
 }
 
 ```
-However, this is boiler plate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate this method for use.
+However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate this method for use.
 
-Using the proposed indirect_value Pimpl classes could be implemented to take advantage of the rule-of-zero to provide compiler generated method implementations.  Note this is implementations only, function declarations are required in the header and in the source file with the <code>default</code> keyword in-order to instruct the compiler to generate the function bodies in the source translation unit where the definition of the implementation class is visible to the compiler. 
+Using the proposed indirect_value Pimpl classes could be implemented to take advantage of the rule-of-zero to provide compiler-generated method implementations.  Note this is implementations only, function declarations are required in the header and in the source file with the <code>default</code> keyword in-order to instruct the compiler to generate the function bodies in the source translation unit where the definition of the implementation class is visible to the compiler, as discussed in [S. Meyers].   
 
 ```
 // Header file
@@ -107,7 +104,7 @@ public:
     ~widget();
 private:
     class impl;
-    unique_ptr<impl> pimpl;
+    std::indirect_value<impl>> pimpl;
 };
  
 // Implementation file
@@ -123,13 +120,13 @@ widget& widget::operator=(const widget& rhs) = default;
 widget::~widget() = default;
 ```
 
-Now the external class has compiler generated copy and move constructors, copy and move assignment operators and destructor.  All of these compiler-generated functions will behave correctly.
-
-## Deep Copying
-
-## Why polymorphic_value does not solve this problem, i.e. not paying for what you don't use.
+Now the visible class has compiler-generated copy and move constructors, copy and move assignment operators and destructor.  All of these compiler-generated functions will behave correctly.  
 
 ## Prior Art
+
+There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed first to <code>indirect</code> (an indirect value type) and again to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
+
+This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "Pimpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
 
 ## Completeness of T*
 Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
@@ -171,7 +168,7 @@ Recommended practice for pointer-to-implementation of Pimpl classes since C++11 
 <tr>
 <td><code>indirect_value& indirect_value::operator=(indirect_value&&)</code></td>
 <td>Move-assignment</td>
-<td>Incomplete </td>
+<td>Complete</td>
 </tr>
 <tr>
 <td><code>T& operator*()</code></td>
@@ -221,7 +218,7 @@ namespace std {
 } // namespace std
 ```
 The class template default_copy serves as the default copier for the class
-template polymorphic_value.
+template indirect_value.
 The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
 
 <code>T* operator()(const T& t) const;</code>
@@ -300,10 +297,10 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Creates an indirect_value object that owns the pointer p. If p is non-null then the copier and deleter of the indirect_value constructed are moved from c and d.
 * Requires: C and D satisfy the requirements of CopyConstructible. If p is non-null then the expression c(*p) returns an object of type T*. The expression d(p) is well-formed, has well-defined behaviour, and does not throw exceptions. 
 * Postconditions: bool(*this) == bool(p).
-* Remarks: A custom copier and deleter are said to be ‘present’ in a polymorphic_value initialised with this constructor.
+* Remarks: A custom copier and deleter are said to be ‘present’ in a indirect_value initialised with this constructor.
 
 <code>indirect_value(const indirect_value& p);</code>
-* Effects: Creates a polymorphic_value object that owns a copy of the object managed by p. The copy is created by the copier in p. If p has a custom copier and deleter then the custom copier and deleter of the indirect_value constructed are copied from those in p.
+* Effects: Creates a indirect_value object that owns a copy of the object managed by p. The copy is created by the copier in p. If p has a custom copier and deleter then the custom copier and deleter of the indirect_value constructed are copied from those in p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
 * Postconditions: bool(*this) == bool(p).
 
@@ -318,7 +315,7 @@ The template parameter T of indirect_value may be an incomplete type.
 
 ### X.Y.5 Class template indirect_value assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
-* Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise the resource managed by *this is initialised by the copy constructor of the resource managed by p.
+* Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise, the resource managed by *this is initialised by the copy constructor of the resource managed by p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
 * Returns: *this.
 * Postconditions: bool(*this) == bool(p).
@@ -327,7 +324,6 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Ownership of the resource managed by p is transferred to this. If p has a custom copier and deleter then the copier and deleter of *this is the same as those in p.
 * Returns: *this.
 * Postconditions: *this contains the old value of p. p is empty.
-* Remarks: The method shall work with incomplete pointer type for T.
 
 ### X.Y.6 Class template indirect_value modifiers [indirect_value.modifiers]
 <code>void swap(indirect_value<T>& p) noexcept;</code>
@@ -351,13 +347,16 @@ const T* operator->() const noexcept;
 * Remarks: The method shall work with incomplete pointer type for T.
 
 <code>explicit operator bool() const noexcept;</code>
-* Returns: false if the polymorphic_value is empty, otherwise true.
+* Returns: false if the indirect_value is empty, otherwise true.
 * Remarks: The method shall work with incomplete pointer type for T.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
 
 # References
+
+[J. Coe] [p0201r3: A polymorphic value-type for C++](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0201r3.pdf)
+
 [J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
 
 [A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
@@ -372,6 +371,6 @@ The authors would like to thank Thomas Russell, and <more to come> for useful di
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
-[W. Brown] [A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
+[W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
 
-[Meneide et al] [out_ptr - a scalable output pointer abstraction,JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
+[Meneide et al] [p1132r6: out_ptr - a scalable output pointer abstraction,JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
