--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -4,7 +4,7 @@ Shortname: P1950
 URL: wg21.link/P1950r0
 Revision: 0
 Audience: LWG
-Status: D
+Status: P
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
 !Source: <a href="https://github.com/jbcoe/indirect_value/documentation/p1950.md">github.com/jbcoe/indirect_value/documentation/p1950.md</a>
@@ -88,7 +88,7 @@ widget& widget::operator=(const widget& rhs)
 }
 
 ```
-However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate this method for use.
+However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate the methods for use.
 
 Using the proposed indirect_value Pimpl classes could be implemented to take advantage of the rule-of-zero to provide compiler-generated method implementations.  Note this is implementations only, function declarations are required in the header and in the source file with the <code>default</code> keyword in-order to instruct the compiler to generate the function bodies in the source translation unit where the definition of the implementation class is visible to the compiler, as discussed in [S. Meyers].   
 
@@ -204,7 +204,7 @@ Recommended practice for pointer-to-implementation of Pimpl classes since C++11 
 </table>
 
 ## Impact on the standard
-This proposal is a pure library extension. It requires additions to be made to the standard library header \<memory\>.
+This proposal is a pure library extension. It requires additions to be made to the standard library header &lt;memory&gt;.
 
 # Technical specifications
 
@@ -351,7 +351,7 @@ const T* operator->() const noexcept;
 * Remarks: The method shall work with incomplete pointer type for T.
 
 # Acknowledgements
-The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
+The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going inspiration.
 
 # References
 
@@ -373,4 +373,4 @@ The authors would like to thank Thomas Russell, and <more to come> for useful di
 
 [W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
 
-[Meneide et al] [p1132r6: out_ptr - a scalable output pointer abstraction,JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
+[Meneide et al] [p1132r6: out_ptr - a scalable output pointer abstraction, JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
