--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,5 +1,5 @@
 <pre class='metadata'>
-Title:  <code>indirect_value</code>: An indirect value-type for C++
+Title:  <code>indirect_value</code>: A Free-Store Allocated Value Type For C++
 Shortname: P1950
 URL: wg21.link/P1950r0
 Revision: 0
@@ -16,9 +16,10 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 </pre>
 
 # Abstract
-Add a class template, indirect_value, to the standard library to support indirect objects with value-like semantics.
+Add a class template, indirect_value, to the C++ Standard Library to support free-store allocated objects with value-like semantics.
+
 # Introduction
-The class template, indirect_value, confers value-like semantics on a freestore allocated object. An indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
+The class template, indirect_value, confers value-like semantics on a free-store allocated object. An indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
 
 ## Motivation
 
@@ -88,7 +89,7 @@ widget& widget::operator=(const widget& rhs)
 }
 
 ```
-However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate the methods for use.
+However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero [CppCoreGuidelines] to have the compiler generate the methods for use.
 
 Using the proposed indirect_value Pimpl classes could be implemented to take advantage of the rule-of-zero to provide compiler-generated method implementations.  Note this is implementations only, function declarations are required in the header and in the source file with the <code>default</code> keyword in-order to instruct the compiler to generate the function bodies in the source translation unit where the definition of the implementation class is visible to the compiler, as discussed in [S. Meyers].   
 
@@ -351,7 +352,7 @@ const T* operator->() const noexcept;
 * Remarks: The method shall work with incomplete pointer type for T.
 
 # Acknowledgements
-The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going inspiration.
+The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
 
 # References
 
@@ -368,6 +369,8 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 [H. Sutter 11] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011](https://herbsutter.com/gotw/_100/)
 
 [Impl] [Reference implementation: indirect_value, J.B.Coe](https://github.com/jbcoe/indirect_value)
+
+[CppCoreGuidelines] [If you can avoid defining default operations, do](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#Rc-zero)
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
