Word Free Store as in the C++ Standard

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,5 +1,5 @@
 <pre class='metadata'>
-Title:  <code>indirect_value</code>: A Free-Store Allocated Value Type For C++
+Title:  <code>indirect_value</code>: A Free Store Allocated Value Type For C++
 Shortname: P1950
 URL: wg21.link/P1950r0
 Revision: 0
@@ -16,10 +16,10 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 </pre>
 
 # Abstract
-Add a class template, indirect_value, to the C++ Standard Library to support free-store allocated objects with value-like semantics.
+Add a class template, indirect_value, to the C++ Standard Library to support free store allocated objects with value-like semantics.
 
 # Introduction
-The class template, indirect_value, confers value-like semantics on a free-store allocated object. An indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
+The class template, indirect_value, confers value-like semantics on a free store allocated object. An indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
 
 ## Motivation
 
