--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -21,8 +21,8 @@ Add a class template, indirect_value, to the C++ Standard Library to support fre
 # Introduction
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An indirect_value may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
 
-## Motivation - a perfect pimpl
-In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the Pimpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the Pimpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
+## Motivation - a perfect PImpl
+In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
 
 ```
 // Header file
@@ -45,7 +45,7 @@ widget::~widget() = default;
 ```
 For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>Pimpl</code> class”. Note, semantically the <code>Pimpl</code> class is the implementation details of the visible class.
 
-### Issues with `unique_ptr<impl>` implementation of Pimpl
+### Issues with `unique_ptr<impl>` implementation of PImpl
 #### const-propagation
 #### copies
 
@@ -63,8 +63,8 @@ do not want to pay for what we don't use.
 TODO
 
 ### Implementation with `indirect_value<impl>`
-Essentially polymorphic_value without the polymorphism - perfect for our Pimpl.
-However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate the methods for use.
+Essentially polymorphic_value without the polymorphism - perfect for our PImpl.
+However, this is boilerplate code that must be repeated per PImpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate the methods for use.
 TODO
 
 ```
@@ -100,10 +100,10 @@ Now the visible class has compiler-generated copy and move constructors, copy an
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
 
-This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "Pimpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
+This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
 
 ## Completeness of T*
-Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
+Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
 
 <table>
 <thead>
