--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -22,7 +22,7 @@ Add a class template, indirect_value, to the C++ Standard Library to support fre
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An indirect_value may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
 
 ## Motivation - a perfect PImpl
-In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
+In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
 ```
 // Header file
@@ -43,29 +43,31 @@ class widget::impl {
 widget::widget() : pimpl_{ std::make_unique<impl>( /*...*/  } { }
 widget::~widget() = default;
 ```
-For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>Pimpl</code> class”. Note, semantically the <code>Pimpl</code> class is the implementation details of the visible class.
+For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>PImpl</code> class”. Note, semantically the <code>PImpl</code> class is the implementation details of the visible class.
 
-### Issues with `unique_ptr<impl>` implementation of PImpl
+### Issues with `unique_ptr<impl>` implementation of PImpl Idiom
 #### const-propagation
+
+Using <code>std::unique_ptr</code> to store the implementation object introduces an issue: within a `const`-qualified member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
+
+The compiler is unable to give thread-compatibility guarantees for `const` objects when
+`const` is not propagated - `const` does not mean immutable in the face of pointer-like-member data.
+
+The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const`- and non-`const`-qualified overloads
+for `operator*` and `operator->`. 
+
 #### copies
+The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
 
-### Implementation with `std::shared_ptr<impl>`
-Shared mutable state is not acceptable.
-TODO
+### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
+The class template `polymorphic_value` confers value-like semantics on a free-store allocated object. This satisfies our
+requirement for const-propagation and compiler-generated copy constructors but incurs an additional cost in supporting polymorphism.
+To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost through
+virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
 
-### Implementation with `std::shared_ptr<const impl>`
-Could be good - copies are cheap but mutating methods that modify the impl class instance cannot be implemented.
-TODO
-
-### Implementation with `polymorphic_value<impl>`
-Incurs type-erasure cost for copies which we do not need to pay. Support for polymorphism is not free - we 
-do not want to pay for what we don't use.
-TODO
-
-### Implementation with `indirect_value<impl>`
-Essentially polymorphic_value without the polymorphism - perfect for our PImpl.
-However, this is boilerplate code that must be repeated per PImpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate the methods for use.
-TODO
+### Perfect Implementation of the PImpl Idiom
+Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store allocated object. Unlike `polymorphic_value`,
+`indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
 
 ```
 // Header file
@@ -278,6 +280,7 @@ The template parameter T of indirect_value may be an incomplete type.
 * Remarks: A custom copier and deleter are said to be ‘present’ in a indirect_value initialised with this constructor.
 
 <code>indirect_value(const indirect_value& p);</code>
+* Constraints: is_copy_constructible_v<T>
 * Effects: Creates a indirect_value object that owns a copy of the object managed by p. The copy is created by the copier in p. If p has a custom copier and deleter then the custom copier and deleter of the indirect_value constructed are copied from those in p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
 * Postconditions: bool(*this) == bool(p).
@@ -288,9 +291,8 @@ The template parameter T of indirect_value may be an incomplete type.
 * Remarks: The method shall work with incomplete pointer type for T.
 
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
-* Effects: TODO
-* Postconditions: TODO
-* Remarks: TODO
+* Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
+* Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
 
 ### X.Y.4 Class template indirect_value destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
@@ -298,6 +300,7 @@ The template parameter T of indirect_value may be an incomplete type.
 
 ### X.Y.5 Class template indirect_value assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
+* Constraints: is_copy_assignable<T>
 * Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise, the resource managed by *this is initialised by the copy constructor of the resource managed by p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
 * Returns: *this.
@@ -333,6 +336,18 @@ const T* operator->() const noexcept;
 * Returns: false if the indirect_value is empty, otherwise true.
 * Remarks: The method shall work with incomplete pointer type for T.
 
+### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
+
+```cpp
+template <class T, class U=T, class ...Ts> indirect_value<T>
+  make_indirect_value(Ts&& ...ts);
+```
+
+* Constraints: `is_constructible_v<U, Ts...>` is true.
+* Expects: `U` meets the `Cpp17CopyConstructible` requirements.
+* Returns: A `indirect_value<T>` owning an object of type `T`
+  direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
 
@@ -359,6 +374,3 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 [W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
 
 [Meneide et al] [p1132r6: out_ptr - a scalable output pointer abstraction, JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
-
-# Appendix A - On type erasure in C++
-TODO
