Rename to Free-Store-Allocated

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,5 +1,5 @@
 <pre class='metadata'>
-Title:  <code>indirect_value</code>: A Free-Store Allocated Value Type For C++
+Title:  <code>indirect_value</code>: A Free-Store-Allocated Value Type For C++
 Shortname: P1950
 URL: wg21.link/P1950r0
 Revision: 0
@@ -16,7 +16,8 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 </pre>
 
 # Abstract
-Add a class template, indirect_value, to the C++ Standard Library to support free-store allocated objects with value-like semantics.
+Add a class template, indirect_value, to the C++ Standard Library to support free-store-allocated objects with value
+-like semantics.
 
 # Introduction
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An indirect_value may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
@@ -60,13 +61,14 @@ for `operator*` and `operator->`.
 The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
 
 ### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
-The class template `polymorphic_value` confers value-like semantics on a free-store allocated object. This satisfies our
+The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our
 requirement for const-propagation and compiler-generated copy constructors but incurs an additional cost in supporting polymorphism.
 To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost through
 virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
 
 ### Perfect Implementation of the PImpl Idiom
-Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store allocated object. Unlike `polymorphic_value`,
+Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store-allocated object. Unlike
+ `polymorphic_value`,
 `indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
 
 ```
@@ -345,7 +347,7 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Expects: `U` meets the `Cpp17CopyConstructible` requirements.
-* Returns: A `indirect_value<T>` owning an object of type `T`
+* Returns: A `indirect_value<T>` owning an object of type ``
   direct-non-list-initialized with `std::forward<Ts>(ts)...`.
 
 # Acknowledgements
