--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -62,8 +62,8 @@ The copy-constructor and copy-assignment operator of `std::unique_ptr` are delet
 
 ### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
 The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our
-requirement for const-propagation and compiler-generated copy constructors but incurs an additional cost in supporting polymorphism.
-To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost through
+requirement for const-propagation and a compiler generated copy constructor and copy assignment operator but incurs an additional cost in supporting polymorphism.
+To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost due to
 virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
 
 ### Perfect Implementation of the PImpl Idiom
